# QuickML

./: ChangeLog  Makefile.am  Makefile.in  NEWS  README  acinclude.m4  aclocal.m4  configure  configure.ac  index.html  messages.ja  ml-usage.en.rd  quickml-analog.in  quickml-ctl.in  quickml.en.rd  quickml.in  quickml.ja.rd  quickmlrc.sample.in  with-mta.ja.rd
lib/: Makefile.am  Makefile.in  quickml.rb
lib/quickml/: Makefile.am  Makefile.in  config.rb  core.rb  gettext.rb  logger.rb  mail.rb  server.rb  sweeper.rb  utils.rb  version.rb.in
